[package]
name = "xerde"
version = "0.1.0"
authors = ["Ezequiel Ramis <ezequielramis.hello@gmail.com>"]
edition = "2018"
license = "MIT"
description = "XML support for serde"
repository = "https://github.com/EzequielRamis/xerde/"
keywords = ["xml", "serde", "parser", "sax", "pest"]
categories = ["encoding", "parser-implementations"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = "1.0.114"